docs: fix swagger routes
